--- a/MusicStore/Language/Chinese.xaml
+++ b/MusicStore/Language/Chinese.xaml
@@ -129,4 +129,28 @@
     <s:String x:Key="wouldyouliketo">您想注册一个新帐户吗?</s:String>
     <s:String x:Key="registernowand">立即注册并获得 25 波兰兹罗提的欢迎礼物!</s:String>
     <s:String x:Key="insufficientpermissions">权限不足</s:String>
+    <s:String x:Key="addnewauthor2">添加了新作者</s:String>
+    <s:String x:Key="allsuportedgraphics">所有支持的图形|*.jpg;*.jpeg;*.png|</s:String>
+    <s:String x:Key="JPEG">JPEG (*.jpg;*.jpeg)|*.jpg;*.jpeg|</s:String>
+    <s:String x:Key="PNG">Portable Network Graphic (*.png)|*.png</s:String>
+    <s:String x:Key="ERROR">错误：缺少必需的值</s:String>
+    <s:String x:Key="creatingartistfailed">无法创建艺术家</s:String>
+    <s:String x:Key="addnewalbum2">添加新专辑</s:String>
+    <s:String x:Key="creatingalbumfailed">创建相册失败</s:String>
+    <s:String x:Key="addnewtrack3">添加新曲目</s:String>
+    <s:String x:Key="creatingtrackfailed">创建曲目失败</s:String>
+    <s:String x:Key="MP3">MP3 音频文件(*.mp3)| *.mp3</s:String>
+    <s:String x:Key="pleasenetereveryneeded">请输入所有需要的信息</s:String>
+    <s:String x:Key="log">登录</s:String>
+    <s:String x:Key="selectauserwho">选择将继承管理员权限的用户</s:String>
+    <s:String x:Key="resignation">辞职</s:String>
+    <s:String x:Key="astheprimaryadministrator">作为主管理员，您不能选择退出管理员权限</s:String>
+    <s:String x:Key="areyousure">您确定要退出管理员权限吗?</s:String>
+    <s:String x:Key="grantadministrative">授予管理权限</s:String>
+    <s:String x:Key="selectauser">选择将继承管理员权限的用户</s:String>
+    <s:String x:Key="grantrights"> - 授予管理员权限</s:String>
+    <s:String x:Key="removerights"> - 删除管理员权限</s:String>
+    <s:String x:Key="asthemainadmin">作为主管理员，您不能删除您的帐户</s:String>
+    <s:String x:Key="accountdelete">删除帐户</s:String>
+    <s:String x:Key="areyoudelete">您确定要删除您的帐户吗?</s:String>
 </ResourceDictionary>
