--- a/MusicStore/Language/Polski.xaml
+++ b/MusicStore/Language/Polski.xaml
@@ -129,4 +129,28 @@
     <s:String x:Key="wouldyouliketo">Czy chcesz zarejestrować się jako nowy użytkownik?</s:String>
     <s:String x:Key="registernowand">Zarejestruj się już teraz i odbierz 25 zł w prezencie powitalnym!</s:String>
     <s:String x:Key="insufficientpermissions">Niewystarczające uprawnienia</s:String>
+    <s:String x:Key="addnewauthor2">Dodaj nowego Autora</s:String>
+    <s:String x:Key="allsuportedgraphics">Wszystkie obsługiwane grafiki|*.jpg;*.jpeg;*.png|</s:String>
+    <s:String x:Key="JPEG">JPEG (*.jpg;*.jpeg)|*.jpg;*.jpeg|</s:String>
+    <s:String x:Key="PNG">Portable Network Graphic (*.png)|*.png</s:String>
+    <s:String x:Key="ERROR">BŁĄD: brak wymaganych wartości</s:String>
+    <s:String x:Key="creatingartistfailed">Tworzenie wykonawcy nie powiodło się</s:String>
+    <s:String x:Key="addnewalbum2">Dodaj nowy album</s:String>
+    <s:String x:Key="creatingalbumfailed">Tworzenie albumu nie powiodło się</s:String>
+    <s:String x:Key="addnewtrack3">Dodaj nowy utwór</s:String>
+    <s:String x:Key="creatingtrackfailed">Tworzenie utworu nie powiodło się</s:String>
+    <s:String x:Key="MP3">MP3 Plik audio (*.mp3)| *.mp3</s:String>
+    <s:String x:Key="pleasenetereveryneeded">Podaj wszystkie potrzebne informacje</s:String>
+    <s:String x:Key="log">Logowanie</s:String>
+    <s:String x:Key="selectauserwho">Wybierz użytkownika, który odziedziczy uprawnienia administratora</s:String>
+    <s:String x:Key="resignation">Rezygnacja</s:String>
+    <s:String x:Key="astheprimaryadministrator">Jako główny administrator nie możesz zrezygnować z uprawnień administratora</s:String>
+    <s:String x:Key="areyousure">Czy na pewno chcesz zrezygnować z uprawnień administratora?</s:String>
+    <s:String x:Key="grantadministrative">Nadaj uprawnienia administracyjne</s:String>
+    <s:String x:Key="selectauser">Wybierz użytkownika, który odziedziczy uprawnienia administratora</s:String>
+    <s:String x:Key="grantrights"> - nadaj uprawnienia administratora</s:String>
+    <s:String x:Key="removerights"> - usuń uprawnienia administratora</s:String>
+    <s:String x:Key="asthemainadmin">Jako główny administrator nie możesz usunąć swojego konta</s:String>
+    <s:String x:Key="accountdelete">Usuwanie konta</s:String>
+    <s:String x:Key="areyoudelete">Czy na pewno chcesz usunąć swoje konto?</s:String>
 </ResourceDictionary>
