--- a/MusicStore/MainMenu.xaml
+++ b/MusicStore/MainMenu.xaml
@@ -181,6 +181,7 @@
                         </Grid.RowDefinitions>
 
                         <Button    x:Name="btnbiblioteka"
+                               Content="{DynamicResource librarybtn}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -190,8 +191,6 @@
                                Margin="0,1,0,0"
                                Style="{DynamicResource button1}"   
                                Grid.Row="0">
-                            <TextBlock Text="{DynamicResource librarybtn}">
-                            </TextBlock>
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -204,6 +203,7 @@
                             </Button.Template>
                         </Button>
                         <Button    x:Name="btnsklep"
+                               Content="{DynamicResource shopbtn}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -213,8 +213,6 @@
                                Margin="0,0,0,0"
                                Style="{DynamicResource button2}"   
                                Grid.Row="1">
-                            <TextBlock Text="{DynamicResource shopbtn}">
-                            </TextBlock>
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -227,6 +225,7 @@
                             </Button.Template>
                         </Button>
                         <Button    x:Name="btnopcje"
+                               Content="{DynamicResource optionbtn}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -236,8 +235,6 @@
                                Margin="0,0,0,0"
                                Style="{DynamicResource button2}"   
                                Grid.Row="3">
-                            <TextBlock Text="{DynamicResource optionbtn}">
-                            </TextBlock>
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -250,6 +247,7 @@
                             </Button.Template>
                         </Button>
                         <Button    x:Name="btnuser"
+                               Content="{DynamicResource optionuserbtn}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -259,8 +257,6 @@
                                Margin="0,0,0,0"
                                Style="{DynamicResource button1}"   
                                Grid.Row="4">
-                            <TextBlock Text="{DynamicResource optionuserbtn}">
-                            </TextBlock>
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -273,6 +269,7 @@
                             </Button.Template>
                         </Button>
                         <Button    x:Name="btnauthors"
+                               Content="{DynamicResource authorlist}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -282,8 +279,6 @@
                                Margin="0,0,0,0"
                                Style="{DynamicResource button1}"   
                                Grid.Row="2">
-                            <TextBlock Text="{DynamicResource authorlist}">
-                            </TextBlock>
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -296,6 +291,7 @@
                             </Button.Template>
                         </Button>
                         <Button    x:Name="btnlogout"
+                               Content="{DynamicResource logoutbtn}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -305,8 +301,6 @@
                                Margin="0,0,0,0"
                                Style="{DynamicResource button2}"   
                                Grid.Row="7">
-                            <TextBlock Text="{DynamicResource logoutbtn}">
-                            </TextBlock>
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
