--- a/MusicStore/Language/Chinese.xaml
+++ b/MusicStore/Language/Chinese.xaml
@@ -18,13 +18,25 @@
     <TextBlock x:Key="choosebtn1" Text="选择文件"/>
     <TextBlock x:Key="choosebtn2" Text="选择文件"/>
     <TextBlock x:Key="applybtn" Text="应用更改"/>
+    <TextBlock x:Key="librarybtn" Text="图书馆"/>
+    <TextBlock x:Key="shopbtn" Text="店铺"/>
+    <TextBlock x:Key="optionbtn" Text="选项"/>
     <s:String x:Key="USER">用户: </s:String>
     <s:String x:Key="USERTYPE">用户类型: </s:String>
-    <s:String x:Key="AVAIBLEFUNDS">可用资金:</s:String>
+    <s:String x:Key="AVAIBLEFUNDS">可用资金: </s:String>
+    <TextBlock x:Key="logoutbtn" Text="登出"/>
     <TextBlock x:Key="changestylebtn" Text="改变风格"/>
     <TextBlock x:Key="changelanbtn" Text="改变语言"/>
+    <TextBlock x:Key="optionuserbtn" Text="帐号设定"/>
     <s:String x:Key="CVCVCV">简历代码</s:String>
     <s:String x:Key="datacard">卡片有效期</s:String>
+    <TextBlock x:Key="addnewtrack" Text="添加新曲目"/>
+    <TextBlock x:Key="addnewalbum" Text="添加新专辑"/>
+    <TextBlock x:Key="addnewartist" Text="添加新艺术家"/>
+    <TextBlock x:Key="browsemod" Text="浏览模式"/>
+    <TextBlock x:Key="editmode" Text="编辑模式"/>
+    <TextBlock x:Key="deletionmode" Text="删除模式"/>
+    <TextBlock x:Key="DELETE" Text="删除"/>
     <s:String x:Key="currentmode">当前模式</s:String>
     <s:String x:Key="selecteditems">选定的对象: </s:String>
     <s:String x:Key="price">价格: </s:String>
@@ -32,7 +44,8 @@
     <TextBlock x:Key="addtocart2" Text="添加到购买"/>
     <s:String x:Key="playsample">播放样本</s:String>
     <s:String x:Key="playtrack">播放曲目</s:String>
-    <s:String x:Key="tracks">曲目:</s:String>
+    <s:String x:Key="tracks">曲目: </s:String>
+    <TextBlock x:Key="openalbum" Text="打开相册"/>
     <s:String x:Key="browse">浏览</s:String>
     <s:String x:Key="edit">编辑</s:String>
     <s:String x:Key="delete">删除</s:String>
@@ -85,6 +98,7 @@
     <TextBlock x:Key="saveasnewauthor" Text="另存为新作者"/>
     <TextBlock x:Key="savechanges3" Text="保存更改"/>
     <TextBlock x:Key="cancel3" Text="取消"/>
+    <TextBlock x:Key="authorlist" Text="作者名单"/>
     <s:String x:Key="changeicon">更改配置文件</s:String>
     <TextBlock x:Key="resignadminpower" Text="退出管理员权限"/>
     <TextBlock x:Key="editpower" Text="编辑权限"/>
@@ -148,20 +162,4 @@
     <s:String x:Key="pleaseselectanothercard">请选择其他付款方式。</s:String>
     <s:String x:Key="currentversionnot">当前版本不支持支付卡支付。</s:String>
     <s:String x:Key="paymentfailed">支付失败</s:String>
-
-    <s:String x:Key="librarybtn" >图书馆</s:String>
-    <s:String x:Key="shopbtn" >店铺</s:String>
-    <s:String x:Key="optionbtn" >选项</s:String>
-    <s:String x:Key="authorlist" >作者名单</s:String>
-    <s:String x:Key="optionuserbtn" >帐号设定</s:String>
-    <s:String x:Key="logoutbtn" >登出</s:String>
-
-    <s:String x:Key="openalbum">打开相册</s:String>
-    <s:String x:Key="addnewtrack">添加新曲目</s:String>
-    <s:String x:Key="addnewalbum">添加新专辑</s:String>
-    <s:String x:Key="addnewartist">添加新艺术家</s:String>
-    <s:String x:Key="browsemod">浏览模式</s:String>
-    <s:String x:Key="editmode">编辑模式</s:String>
-    <s:String x:Key="deletionmode">删除模式</s:String>
-    <s:String x:Key="DELETE">删除</s:String>
 </ResourceDictionary>
